force-app/main/default/objects/openq__Interaction__c/openq__Interaction__c.object-meta.xml
<CustomObject>
    <label>Interaction</label>
    <nameField>
        <label>Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>