force-app/main/default/objects/openq__Interaction__c/fields/openq__Attendees__c.field-meta.xml
<CustomField>
    <fullName>openq__Attendees__c</fullName>
    <formula>openq__Attendee_Count__c +  openq__Other_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>