force-app/main/default/objects/openq__Interaction__c/fields/openq__Created_By_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Created_By_Name__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
    <label>Created By Name</label>
    <type>Text</type>
</CustomField>