force-app/main/default/objects/openq__Interaction__c/fields/openq__Date__c.field-meta.xml
<CustomField>
    <fullName>openq__Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>