force-app/main/default/objects/openq__Interaction__c/fields/openq__Follow_Up_Completed__c.field-meta.xml
<CustomField>
    <fullName>openq__Follow_Up_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-Up Completed</label>
    <type>Checkbox</type>
</CustomField>