force-app/main/default/objects/openq__Interaction__c/fields/openq__Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>openq__Interaction_Type__c</fullName>
    <label>Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web Presentation</fullName>
            </value>
            <value>
                <fullName>1:1 Face to Face (2 or less)</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Group Presentation (3 or more)</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>