force-app/main/default/objects/openq__Interaction__c/fields/openq__Local_Client_Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>openq__Local_Client_Interaction_Id__c</fullName>
    <label>Local Client Interaction Id</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>