force-app/main/default/objects/openq__Interaction__c/fields/openq__MP__c.field-meta.xml
<CustomField>
    <fullName>openq__MP__c</fullName>
    <label>MP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>openq__PL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>Gt</fullName>
            </value>
            <value>
                <fullName>gr</fullName>
            </value>
            <value>
                <fullName>GTy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>