force-app/main/default/objects/openq__Interaction__c/fields/openq__Page_Layout_Id__c.field-meta.xml
<CustomField>
    <fullName>openq__Page_Layout_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page Layout</label>
    <referenceTo>openq__Page_Layout__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>