force-app/main/default/objects/openq__Interaction__c/fields/openq__pl_dep__c.field-meta.xml
<CustomField>
    <fullName>openq__pl_dep__c</fullName>
    <label>pl-dep</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>openq__PL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>