force-app/main/default/objects/openq__Interaction__c/fields/openq__Presentation__c.field-meta.xml
<CustomField>
    <fullName>openq__Presentation__c</fullName>
    <label>Presentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>