force-app/main/default/objects/openq__Interaction__c/fields/openq__Product__c.field-meta.xml
<CustomField>
    <fullName>openq__Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Argonotab</fullName>
            </value>
            <value>
                <fullName>Hermadovil</fullName>
            </value>
            <value>
                <fullName>Orvantix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>