force-app/main/default/objects/openq__Interaction__c/fields/openq__Related_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>openq__Related_Event_Name__c</fullName>
    <formula>openq__Related_Event__r.openq__Name__c</formula>
    <label>Related Event Name</label>
    <type>Text</type>
</CustomField>