force-app/main/default/objects/openq__Interaction__c/fields/openq__UUID__c.field-meta.xml
<CustomField>
    <fullName>openq__UUID__c</fullName>
    <label>UUID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>