force-app/main/default/objects/openq__Interaction__c/recordTypes/openq__Normal.recordType-meta.xml
<RecordType>
    <fullName>openq__Normal</fullName>
    <active>true</active>
    <label>Normal</label>
</RecordType>