force-app/main/default/objects/openq__Interaction__c/validationRules/Interaction_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Interaction_Name_Required</fullName>
    <active>true</active>
    <description>Requires Interaction name on creation.</description>
    <errorConditionFormula>AND
(
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
ISNEW(),
ISBLANK(Name)
)</errorConditionFormula>
    <errorMessage>Interaction Name is required.</errorMessage>
</ValidationRule>