force-app/main/default/objects/openq__Interaction__c/validationRules/openq__Interaction_Type_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>openq__Interaction_Type_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(openq__Interaction_Type__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>Interaction Type must be specified.</errorMessage>
</ValidationRule>