force-app/main/default/objects/openq__Interaction__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>openq__Date__c</columns>
    <columns>openq__UUID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>openq__Product__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>openq__Created_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>